log
Tue, Mar 25, 2025 12:34:59 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Tue, Mar 25, 2025 12:35:32 PM: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 0/70
abd7642
Tue, Mar 25, 2025 12:36:14 PM: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
cde20a8
Tue, Mar 25, 2025 12:41:14 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
cdde38b
Tue, Mar 25, 2025 12:41:41 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f1eecd7
Tue, Mar 25, 2025 12:42:17 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e933a26
Tue, Mar 25, 2025 12:42:41 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
61fa98e
Tue, Mar 25, 2025 12:54:31 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d287eda
Tue, Mar 25, 2025 12:55:01 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
46b3f8b
Tue, Mar 25, 2025 12:55:22 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5214245
Tue, Mar 25, 2025  1:00:13 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9e9a826
Tue, Mar 25, 2025  1:06:36 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
d54a3dc
Tue, Mar 25, 2025  1:09:10 PM: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
302d744
Tue, Mar 25, 2025  1:10:11 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
d27c63a
Tue, Mar 25, 2025  1:12:26 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
52efd87
Tue, Mar 25, 2025  1:13:39 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:54:20: error: comparison between pointer and integer [-Werror]
     if (list->tail == 1) return (list->head->data);
                    ^~
cc1.exe: all warnings being treated as errors
Compilation failed
aef63c0
Tue, Mar 25, 2025  1:14:34 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
5699e54
Tue, Mar 25, 2025  1:19:02 PM: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
e9cf062
Tue, Mar 25, 2025  1:20:15 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
e27a758
Tue, Mar 25, 2025  1:20:55 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
164c78c
Tue, Mar 25, 2025  1:21:26 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
3813841
Tue, Mar 25, 2025  1:22:46 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bbf2e0a
Tue, Mar 25, 2025  1:24:04 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
e3248d9
Tue, Mar 25, 2025  1:24:32 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d8f2320
Tue, Mar 25, 2025  1:25:00 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8cbd0f8
Tue, Mar 25, 2025  1:25:15 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|4
total_score: 25/70
bfeac6b
Sun 30 Mar 2025 07:48:51 PM UTC: 
 tests:  6|4
total_score: 25/70
ad793c5
Sun 30 Mar 2025 07:51:00 PM UTC: 
 list.c | 36 ++++++++++++++++++------------------
 1 file changed, 18 insertions(+), 18 deletions(-)
 tests:  6|4
total_score: 25/70
03ab21b
